Added some variables to heading wizard.
Rev: tools/templateinfo.html:1.8

--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -15,6 +15,9 @@
   <insert name="Heading 2" title="Edit heading 2 preferences"
           help="help" category="tmpl">
 
+  <insert name="Heading 3" title="Edit heading 3 preferences"
+          help="help" category="tmpl">
+
   <!--  Navigation groups  -->
   <insert name="General" title="Edit general navigation preferences"
           help="help" category="nav">
@@ -79,18 +82,43 @@
           type="int" help="Heading 1 size"
 	  _wizard_name="Heading 1"  _wizard_category="tmpl">
 	  
+  <insert name="h1_shadow" title="Heading 1 shadow"
+          type="toggle" help="Heading 1 shadow"
+	  _wizard_name="Heading 1"  _wizard_category="tmpl">
+	  
   <!--  Heading 2  -->	  
   <insert name="h2_color" title="Heading 2 color"
           type="color" help="Heading 2 color"
 	  _wizard_name="Heading 2" _wizard_category="tmpl">
 
-  <insert name="h2_font" title="Heading 1 font"
+  <insert name="h2_font" title="Heading 2 font"
           type="font" help="Heading 2 font"
 	  _wizard_name="Heading 2" _wizard_category="tmpl">
 
   <insert name="h2_size" title="Heading 2 size"
           type="int" help="Heading 2 size"
 	  _wizard_name="Heading 2" _wizard_category="tmpl">
+	  
+  <insert name="h2_shadow" title="Heading 2 shadow"
+          type="toggle" help="Heading 2 shadow"
+	  _wizard_name="Heading 2"  _wizard_category="tmpl">
+	  
+  <!--  Heading 3  -->	  
+  <insert name="h3_color" title="Heading 3 color"
+          type="color" help="Heading 3 color"
+	  _wizard_name="Heading 3" _wizard_category="tmpl">
+
+  <insert name="h3_font" title="Heading 3 font"
+          type="font" help="Heading 3 font"
+	  _wizard_name="Heading 3" _wizard_category="tmpl">
+
+  <insert name="h3_size" title="Heading 3 size"
+          type="int" help="Heading 3 size"
+	  _wizard_name="Heading 3" _wizard_category="tmpl">
+	  
+  <insert name="h3_shadow" title="Heading 3 shadow"
+          type="toggle" help="Heading 3 shadow"
+	  _wizard_name="Heading 3"  _wizard_category="tmpl">
 	  
   <!--  Navigation Variables  -->
   <!--  General  -->
