--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -254,11 +254,11 @@
 
   <delete all>
 
-  <insert name="Clasic" title="" customer_id=1>
-  <insert name="Modern" title="" customer_id=1>
-  <insert name="Strict" title="" customer_id=1>
-  <insert name="Sunshine" title="" customer_id=1>
-  <insert name="Depresive" title="" customer_id=1>
+  <insert name="Clasic" title="" customer_id=0>
+  <insert name="Modern" title="" customer_id=0>
+  <insert name="Strict" title="" customer_id=0>
+  <insert name="Sunshine" title="" customer_id=0>
+  <insert name="Depresive" title="" customer_id=0>
   
 </sql-insert>
 
@@ -270,6 +270,25 @@
 
   <delete all>
 
-  <insert scheme_id=1 _variable_name="template_name" value="Template 1">
+  <insert scheme_id=1 _variable_name="template_name" value="tmpl1.tmpl">
+  <insert scheme_id=1 _variable_name="nav_name" value="nav1.ntmpl">
+  <insert scheme_id=1 _variable_name="bg_color" value="black">
+  <insert scheme_id=1 _variable_name="text_color" value="white">
+  <insert scheme_id=2 _variable_name="template_name" value="tmpl2.tmpl">
+  <insert scheme_id=2 _variable_name="nav_name" value="nav1.ntmpl">
+  <insert scheme_id=2 _variable_name="bg_color" value="pink">
+  <insert scheme_id=2 _variable_name="text_color" value="white">
+  <insert scheme_id=3 _variable_name="template_name" value="tmpl3.tmpl">
+  <insert scheme_id=3 _variable_name="nav_name" value="nav1.ntmpl">
+  <insert scheme_id=3 _variable_name="bg_color" value="grey">
+  <insert scheme_id=3 _variable_name="text_color" value="white">
+  <insert scheme_id=4 _variable_name="template_name" value="tmpl1.tmpl">
+  <insert scheme_id=4 _variable_name="nav_name" value="nav1.ntmpl">
+  <insert scheme_id=4 _variable_name="bg_color" value="green">
+  <insert scheme_id=4 _variable_name="text_color" value="white">
+  <insert scheme_id=5 _variable_name="template_name" value="tmpl1.tmpl">
+  <insert scheme_id=5 _variable_name="nav_name" value="nav1.ntmpl">
+  <insert scheme_id=5 _variable_name="bg_color" value="blue">
+  <insert scheme_id=5 _variable_name="text_color" value="white">
 
 </sql-insert>
