Program now partly works with db.
Rev: modules/admin/tabs/10:Customer_configuration/page.html:1.4

--- a/modules/admin/tabs/10:Customer_configuration/page.html
+++ b/modules/admin/tabs/10:Customer_configuration/page.html
@@ -10,7 +10,7 @@
 			    '¤name:quote=mysql¤',
 			    1,1,
 		            '¤sms:quote=mysql¤',
-		            '¤fax:quote=mysql¤',NULL)">
+		            '¤fax:quote=mysql¤',NULL,1)">
 
   </if>
   <preparse tag=sqloutput query="select id,name,password,fax,sms,user_id from customers
