--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -220,35 +220,14 @@
   <insert name="Nav 3" value="nav3.ntmpl" _variable_name="nav_name">
 
   <!--  Navigation files  -->
-  <insert name="bg 1" value="bg1.pnm" _variable_name="nav_bg_img">
-  <insert name="bg 2" value="bg2.pnm" _variable_name="nav_bg_img">
-  <insert name="bg 3" value="bg3.pnm" _variable_name="nav_bg_img">
-  <insert name="bg 4" value="bg4.pnm" _variable_name="nav_bg_img">
-  <insert name="bg 5" value="bg5.pnm" _variable_name="nav_bg_img">
-  <insert name="bg 6" value="bg6.pnm" _variable_name="nav_bg_img">
-  <insert name="Vaser" value="nav2/vaser.ppm" _variable_name="nav_bg_img">
-  <insert name="cashew" value="nav2/cashew.ppm" _variable_name="nav_bg_img">
+  <insert name="bg 1" value="nav1/bg1.pnm" _variable_name="nav_bg_img">
+  <insert name="bg 2" value="nav1/bg2.pnm" _variable_name="nav_bg_img">
+  <insert name="bg 3" value="nav1/bg3.pnm" _variable_name="nav_bg_img">
+  <insert name="bg 4" value="nav1/bg4.pnm" _variable_name="nav_bg_img">
+  <insert name="bg 5" value="nav1/bg5.pnm" _variable_name="nav_bg_img">
+  <insert name="bg 6" value="nav1/bg6.pnm" _variable_name="nav_bg_img">
+  <insert name="cashew" value="nav2/cashew.pnm" _variable_name="nav_bg_img">
 
-  <!--  Test options-->
-  <insert name="foo"    value="" _variable_name="select">
-  <insert name="bar"    value="" _variable_name="select">
-  <insert name="gazonk" value="" _variable_name="select">
-  <insert name="fie"    value="" _variable_name="select">
-
-  <insert name="foo"    value="" _variable_name="checkbox">
-  <insert name="bar"    value="" _variable_name="checkbox">
-  <insert name="gazonk" value="" _variable_name="checkbox">
-  <insert name="fie"    value="" _variable_name="checkbox">
-  
-  <insert name="foo"    value="" _variable_name="radio">
-  <insert name="bar"    value="" _variable_name="radio">
-  <insert name="gazonk" value="" _variable_name="radio">
-  <insert name="fie"    value="" _variable_name="radio">
-        
-  <insert name="foo"    value="" _variable_name="list">
-  <insert name="bar"    value="" _variable_name="list">
-  <insert name="gazonk" value="" _variable_name="list">
-  <insert name="fie"    value="" _variable_name="list">      
 </sql-insert>
 
 
