Fixed template/toolbar in menu-editor.
Rev: modules/autoweb/AutoWeb.pmod:1.11
Rev: modules/autoweb/Tab.pmod:1.10
Rev: modules/autoweb/autositefs.pike:1.18
Rev: modules/autoweb/tabs/10:Template_Editor/page.html:1.7
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.15
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/edit.pike:1.5
Rev: modules/autoweb/tabs/25:Menu_Editor/page.pike:1.3
Rev: modules/autoweb/tabs/25:Menu_Editor/wizards/new.pike:1.2
Rev: modules/autoweb/templates/default.tmpl:1.9
Rev: modules/autoweb/webadm.pike:1.19

--- a/modules/autoweb/tabs/10:Template_Editor/page.html
+++ b/modules/autoweb/tabs/10:Template_Editor/page.html
@@ -121,7 +121,7 @@
 	<page>
 	  <input type=hidden name=edit value='¤edit:quote=mysql¤'>
 	  <b>Template name: </b>
-	  <var name=scheme_name type=string><p>
+	  <var name=scheme_name type=string size=40><p>
 	  Enter a name for your new template.<br>
 	</page>
 	<page>
