--- a/modules/admin/tabs/10:Customer_configuration/page.html
+++ b/modules/admin/tabs/10:Customer_configuration/page.html
@@ -3,18 +3,20 @@
 <formoutput quote='¤'>
   <if variable=save>
     <b>Information saved.</b><p>
-    <sqlquery query="replace into customers
-                     values('¤id:quote=mysql¤',
-		            '¤user_id:quote=mysql¤',
-		            '¤password:quote=mysql¤',
-			    '¤name:quote=mysql¤',
-			    1,1,
-		            '¤sms:quote=mysql¤',
-		            '¤fax:quote=mysql¤',NULL,1)">
+    <sqlquery query="update customers set
+                     user_id='¤user_id:quote=mysql¤',
+		     password='¤password:quote=mysql¤',
+		     name='¤name:quote=mysql¤',
+		     intraseek='1',
+		     logview='1',
+		     sms='¤sms:quote=mysql¤',
+		     fax='¤fax:quote=mysql¤'
+		     where id='¤id:quote=mysql¤'">
 
   </if>
-  <preparse tag=sqloutput query="select id,name,password,fax,sms,user_id from customers
-                    where id='¤customer:quote=mysql¤'">
+  <preparse tag=sqloutput
+    query="select id,name,password,fax,sms,user_id from customers
+           where id='¤customer:quote=mysql¤'">
     <preparse tag=tablify cellseparator=/// rowseparator=\\\
               cellpadding=0 cellspacing=0>
       <form method=post>
