Disabled buttons are visible but shaded. Template schemes in db are splitted in two parts
Rev: doc/TODO:1.3
Rev: doc/db.spec:1.15
Rev: modules/admin/actions/20:Add_customer/page.html:1.8
Rev: modules/autoweb/Tab.pmod:1.11
Rev: modules/autoweb/tabs/10:Template_Editor/page.html:1.9
Rev: modules/autoweb/tabs/20:HTML_Editor/page.pike:1.16
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_directory.pike:1.5
Rev: modules/autoweb/tabs/20:HTML_Editor/wizards/move_file.pike:1.3
Rev: modules/autoweb/templates/default.tmpl:1.11
Rev: modules/autoweb/webadm.pike:1.21
Rev: sites/1/index.html:1.5
Rev: templates/tmpl1.tmpl:1.5
Rev: tools/templateinfo.html:1.13

--- a/modules/admin/actions/20:Add_customer/page.html
+++ b/modules/admin/actions/20:Add_customer/page.html
@@ -31,7 +31,7 @@
      <comment><--  New scheme  --></comment>		     
      <formoutput quote='$'>
        <sqlquery mysql-insert-id=new_scheme_id
-         query="insert into template_schemes (customer_id,name) values
+         query="insert into customers_schemes (customer_id,name) values
 	                                     ('$customer_id$','Default')">
      </formoutput>
      
@@ -43,7 +43,7 @@
        <sqloutput quote='£'
          query="select * from template_schemes_vars
 	        where scheme_id='$scheme_id$'">
-         <sqlquery query="insert into  template_schemes_vars
+         <sqlquery query="insert into customers_schemes_vars
 	                  (scheme_id,variable_id,value) values
 		          ('$new_scheme_id$','£variable_id£',
 			   '£value:quote=mysql£')">
