Removed empty wizard.
Rev: tools/templateinfo.html:1.17

--- a/tools/templateinfo.html
+++ b/tools/templateinfo.html
@@ -34,9 +34,6 @@
   <insert name="Navigation background colors" title="Edit navigation background colors"
           help="help" category="nav">
 
-  <insert name="Navigation images" title="Edit navigation images"
-          help="help" category="nav">
-
 </sql-insert>
 
 <sql-insert table="template_wizards_pages"
@@ -202,7 +199,7 @@
 	  _page_name="Page head layout p2">
 	  
   <!--  Navigation Variables  -->
-  <!--  General  -->
+  <!--  Navigation type  -->
   <insert name="nav_name" title="Navigation style"
           type="select" help=""
 	  _page_name="Navigation type p1">
