--- a/modules/admin/tabs/10:Customer_configuration/page.html
+++ b/modules/admin/tabs/10:Customer_configuration/page.html
@@ -1,39 +1,45 @@
 <define tag=uservar><b>&title;</b> /// <input size=&size; type=&type; name=&name; value='#&name;#'>\\\</define>
 
 <formoutput quote='¤'>
-  <if variable=save>
+  <if variable=really_delete>
+    <sqlquery query="delete from customers where id='¤id:quote=mysql¤'">
+    <sqlquery query="delete from users where customer_id='¤id:quote=mysql¤'">
+    <sqlquery query="delete from dns where customer_id='¤id:quote=mysql¤'">
+    <b>Customer deleted. Please click 'Choose customer'.<br>
+    <autosite-dns-update><br>
+    <autosite-fs-update></b>
+  </if>
+  <else><if variable=delete>
+    <form method=get action=delete.html>
+      <input type=hidden name=id value='¤id:quote=html¤'>
+      <input type=submit name=really_delete value='Yes, I really want to delete this customer'>
+      <input type=submit name=oops value='No, do not delete this customer.'>
+    </form>
+  </if>
+  <else><if variable=save>
     <b>Information saved.</b><p>
     <sqlquery query="update customers set
-                     user_id='¤user_id:quote=mysql¤',
-		     password='¤password:quote=mysql¤',
-		     name='¤name:quote=mysql¤',
-		     intraseek='1',
-		     logview='1',
-		     sms='¤sms:quote=mysql¤',
-		     fax='¤fax:quote=mysql¤'
-		     where id='¤id:quote=mysql¤'">
-
+  	             user_id='¤user_id:quote=mysql¤',
+  		     password='¤password:quote=mysql¤',
+  		     name='¤name:quote=mysql¤'
+                     where id='¤id:quote=mysql¤'">
+   
   </if>
   <preparse tag=sqloutput
-    query="select id,name,password,fax,sms,user_id from customers
-           where id='¤customer:quote=mysql¤'">
+     query="select id,name,password,fax,sms,user_id from customers
+  	    where id='¤customer:quote=mysql¤'">
     <preparse tag=tablify cellseparator=/// rowseparator=\\\
-              cellpadding=0 cellspacing=0>
+  		  cellpadding=0 cellspacing=0>
       <form method=post>
         <input type=hidden name=id value=#id#>
         <uservar title='Customer name:' type=text size=40 name=name>
-        <uservar title='Login name:' type=text size=20 name=user_id>
-        <uservar title='Password:' type=password size=20 name=password>
-	<input type=submit name=save value='Save'>
-      </form>
+  	<uservar title='Login name:' type=text size=20 name=user_id>
+  	<uservar title='Password:' type=password size=20 name=password>
+  	///<input type=submit name=save value='Save'> &nbsp; &nbsp; &nbsp; &nbsp;
+  	<input type=submit name=delete value='Delete this customer'>
+      </form> 
     </preparse>
   </preparse>
-  <comment>
-    <hr noshade size=1>
-    ¤customer¤
-    <form method=get>
-      <input type=hidden name=id value=¤customer¤>
-      <input type=submit name=delete value='Delete this customer'>
-    </form>
-    </comment>
+  </else>
+  </else>
 </formoutput>  
