New nice files and fixes in the old ones
Rev: html/mail/actions:1.1
Rev: html/mail/display.html:1.2
Rev: html/mail/import.html:1.2
Rev: html/mail/index.html:1.2
Rev: html/mail/send.html:1.1
Rev: html/mail/show_buttons:1.1
Rev: html/mail/show_mail:1.1
Rev: html/mail/show_mailbox:1.2
Rev: html/mail/show_mailboxes:1.2
Rev: html/mail/stddef:1.2

--- a/html/mail/display.html
+++ b/html/mail/display.html
@@ -1,1 +1,1 @@
-<formoutput><mail-body-part mail=#mail# part=#part#></formoutput>
+<formoutput><mail-body-part name=#name# mail=#mail# part=#part#></formoutput>
